--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             </ul>
         </div>
         <table>
-            <thead id="thead">
+            <thead>
                 <tr>
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
+                    <th id="th1">Lorem ipsum dolor</th>
+                    <th id="th2">Lorem ipsum dolor</th>
+                    <th id="th3">Lorem ipsum dolor</th>
                 </tr>
             </thead>
             <tbody>
@@ -69,7 +69,7 @@
                 <tr id="tr2">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam molestiae minus quasi porro autem
+                    <td>Lorem ipsum dolor sit amet consectetur      adipisicing elit. Totam molestiae minus quasi porro autem
                         incidunt praesentium expedita! Quaerat, sunt. Incidunt voluptatibus repellendus qui dolor porro
                         suscipit voluptatem nulla tempore ex?</td>
                 </tr>
@@ -95,8 +95,8 @@
                 explicabo.
             </p>
         </div>
-    </main>
-    <footer>
+
+
         <h3>Potrebbe interessarti</h3>
 
         <img src="assets/img/monitor.jpg" alt="">
@@ -104,7 +104,8 @@
         <img src="assets/img/graph.jpg" alt="">
         <p>Lorem ipsum dolor</p>
 
-    </footer>
+    </main>
+
 </body>
 
 </html>
