--- a/index.html
+++ b/index.html
@@ -62,23 +62,17 @@
                 <tr id="tr1">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam molestiae minus quasi porro autem
-                        incidunt praesentium expedita! Quaerat, sunt. Incidunt voluptatibus repellendus qui dolor porro
-                        suscipit voluptatem nulla tempore ex?</td>
+                    <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia numquam, accusamus qui voluptatum dolores quaerat cupiditate! Ducimus amet totam error tempora expedita iste, quia alias dolorum, asperiores ab id placeat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ducimus quisquam adipisci ipsa, odio optio libero earum magni.</td>
                 </tr>
                 <tr id="tr2">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur      adipisicing elit. Totam molestiae minus quasi porro autem
-                        incidunt praesentium expedita! Quaerat, sunt. Incidunt voluptatibus repellendus qui dolor porro
-                        suscipit voluptatem nulla tempore ex?</td>
+                    <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia numquam, accusamus qui voluptatum dolores quaerat cupiditate! Ducimus amet totam error tempora expedita iste, quia alias dolorum, asperiores ab id placeat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ducimus quisquam adipisci ipsa, odio optio libero earum magni.</td>
                 </tr>
                 <tr id="tr3">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam molestiae minus quasi porro autem
-                        incidunt praesentium expedita! Quaerat, sunt. Incidunt voluptatibus repellendus qui dolor porro
-                        suscipit voluptatem nulla tempore ex?</td>
+                    <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia numquam, accusamus qui voluptatum dolores quaerat cupiditate! Ducimus amet totam error tempora expedita iste, quia alias dolorum, asperiores ab id placeat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ducimus quisquam adipisci ipsa, odio optio libero earum magni.</td>
                 </tr>
             </tbody>
         </table>
